--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml">
+<html>
 <head>
+    <meta charset="utf-8">
     <title>canvas</title>
     <link rel="stylesheet" href="style.css">
 </head>
